tests/lexer/invalid/test_out_of_range.src
// Тест 10: Числа вне диапазона
int too_big = 2147483648;
int too_small = -2147483649;
int also_big = 9999999999;